--- a/index.html
+++ b/index.html
@@ -19,12 +19,22 @@
         span#a1{
             display: block;
             color: aqua;
-            
+
             background:yellow;
             height: 200px;
             width: 200px;
             
 
+        }
+
+        span.b1{
+            display: block;
+            color:pink;
+            height: 200px;
+            width: 200px;
+            background: navy;
+            font-size: 25px;
+            font-weight: bold;
         }
 
 
@@ -33,5 +43,6 @@
 <body>
     <div>KISHAN VISHWKARMA</div>
     <span id="a1">Css id selector</span>
+    <span class="b1">Css class selector</span>
 </body>
 </html>
