--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
         }
 
+        /* Css class selector syntax */
         span.b1{
             display: block;
             color:pink;
@@ -37,6 +38,18 @@
             font-weight: bold;
         }
 
+        /* Css attribute selector */
+
+        a[href="https://www.google.com"]{
+            display: block;
+            height: 200px;
+            width: 200px;
+            background: blueviolet;
+            text-decoration: none;
+        }
+
+
+
 
     </style>
 </head>
@@ -44,5 +57,6 @@
     <div>KISHAN VISHWKARMA</div>
     <span id="a1">Css id selector</span>
     <span class="b1">Css class selector</span>
+    <a href="https://www.google.com">Css attribute selector</a>
 </body>
 </html>
