how i can use universal selector

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             text-decoration: none;
         }
 
+        /* Css universal selector */
+        *{
+            border: 10px solid #000 
+        }
 
 
 
